[KUserProxy] Adjust to accounts service

The avatar can also lie in the accounts service directory. Monitor there and also monitor for removal.
Also in the handler check all paths we monitor rather than faceIconPath which might be empty due to the file having been removed.

BUG: 384107

Differential Revision: https://phabricator.kde.org/D9951